--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,81 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <h1>{{resultado}}</h1>
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="redefinir()">AC</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="operador('/')">/</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="operador('*')">*</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="limpar()">DEL</ion-button>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="digito('7')">7</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="digito('8')">8</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="digito('9')">9</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="operador('-')">-</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="digito('4')">4</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="digito('5')">5</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="digito('6')">6</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="operador('+')">+</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="digito('1')">1</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="digito('2')">2</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="digito('3')">3</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="digito(',')">,</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="porcentagem()">%</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="digito('0')">0</ion-button>
+        </ion-col>
+        <ion-col size="6">
+          <ion-button (click)="calcular()">=</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
+
 </ion-content>
