--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,11 +1,16 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
-  top: 50%;
+  top: 25%;
   transform: translateY(-50%);
+}
+ion-button {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding:0;
 }
 
 #container strong {
@@ -16,12 +21,23 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
 #container a {
   text-decoration: none;
+}
+
+h1 {
+  text-align: right;
+  padding-right: 9%;
+}
+
+@media screen and (min-width: 768px) {
+  #container {
+    left: 30%;
+    right: 30%;
+    border: 2px solid dodgerblue;
+  }
 }
