--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -60,7 +60,7 @@
           <ion-button (click)="digito('3')">3</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="digito(',')">,</ion-button>
+          <ion-button (click)="fracao()">.</ion-button>
         </ion-col>
       </ion-row>
 
