--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,7 +26,7 @@
           <ion-button (click)="fracionar()">1/x</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="redefinirElemento()">x²</ion-button>
+          <ion-button (click)="quadrado()">x²</ion-button>
         </ion-col>
         <ion-col>
           <ion-button (click)="raiz()">√</ion-button>
