--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,7 +3,7 @@
 
 
   <div id="container">
-    <h1>{{resultado}}</h1>
+    <label><h1>{{resultado}}</h1></label>
     <ion-grid>
 
       <ion-row>
@@ -17,7 +17,7 @@
           <ion-button (click)="redefinir()">C</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="limpar()">DEL</ion-button>
+          <ion-button (click)="limpar()">⌫</ion-button>
         </ion-col>
       </ion-row>
 
