--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,13 +11,13 @@
           <ion-button (click)="porcentagem()">%</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="redefinirElemento()">CE</ion-button>
-        </ion-col>
-        <ion-col>
           <ion-button (click)="redefinir()">C</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="limpar()">⌫</ion-button>
+          <ion-button (click)="redefinirElemento()">CE</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="limpar()"><ion-icon name="backspace"></ion-icon></ion-button>
         </ion-col>
       </ion-row>
 
@@ -38,13 +38,13 @@
 
       <ion-row>
         <ion-col>
-          <ion-button (click)="digito('7')">7</ion-button>
+          <ion-button (click)="digito('7')" style="--background: #626262;">7</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="digito('8')">8</ion-button>
+          <ion-button (click)="digito('8')" style="--background: #626262;">8</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="digito('9')">9</ion-button>
+          <ion-button (click)="digito('9')" style="--background: #626262;">9</ion-button>
         </ion-col>
         <ion-col>
           <ion-button (click)="operador('×')">×</ion-button>
@@ -53,13 +53,13 @@
 
       <ion-row>
         <ion-col>
-          <ion-button (click)="digito('4')">4</ion-button>
+          <ion-button (click)="digito('4')" style="--background: #626262;">4</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="digito('5')">5</ion-button>
+          <ion-button (click)="digito('5')" style="--background: #626262;">5</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="digito('6')">6</ion-button>
+          <ion-button (click)="digito('6')" style="--background: #626262;">6</ion-button>
         </ion-col>
         <ion-col>
           <ion-button (click)="operador('-')">-</ion-button>
@@ -68,13 +68,13 @@
 
       <ion-row>
         <ion-col>
-          <ion-button (click)="digito('1')">1</ion-button>
+          <ion-button (click)="digito('1')" style="--background: #626262;">1</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="digito('2')">2</ion-button>
+          <ion-button (click)="digito('2')" style="--background: #626262;">2</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="digito('3')">3</ion-button>
+          <ion-button (click)="digito('3')" style="--background: #626262;">3</ion-button>
         </ion-col>
         <ion-col>
           <ion-button (click)="operador('+')">+</ion-button>
@@ -86,13 +86,13 @@
           <ion-button (click)="negar()">+/-</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="digito('0')">0</ion-button>
+          <ion-button (click)="digito('0')" style="--background: #626262;">0</ion-button>
         </ion-col>
         <ion-col>
           <ion-button (click)="fracao()">.</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="calcular()">=</ion-button>
+          <ion-button style="--background: #00C792;" (click)="calcular()">=</ion-button>
         </ion-col>
       </ion-row>
 
